# carla-adversarial-braking

./: README.md
carla_autobreak_test/: package.xml  setup.cfg  setup.py
carla_autobreak_test/carla_autobreak_test/: SpawnForEachMap.txt  coco.yaml  data_collector.py  data_collector_args.py  depth.py  lidar.py  lidar_control.py  lidar_fusion.py  lidar_topic_attack.py  setSpawn.py  stop_sign_data_Lu2.csv  stop_sign_data_normal.csv  vehicle_control.py  weatherPresets.txt  weatherTest.py  yolo.py  yolo_old.py
carla_autobreak_test/carla_autobreak_test/countermeasures/: Defense1.py  Defense2_control.py  Defense2_yolo.py  attack_control.py  attack_yolo.py  vehicle_control_store.py
carla_autobreak_test/config/: objects.json
carla_autobreak_test/launch/: carla_autobreak_test.launch  carla_autobreak_test.launch.py
