<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_autobreak_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yromanoma42@tntech.edu">yromanoma42</maintainer>
  <license>MIT</license>

  <depend>carla_ros_bridge</depend>
  <depend>carla_spawn_objects</depend>
  <depend>rviz_carla_plugin</depend>
  <depend>carla_ros_scenario_runner</depend>
  <depend>carla_waypoint_publisher</depend>
  <depend>carla_manual_control</depend>
  <depend>rviz2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
